--- a/app/views/index.html
+++ b/app/views/index.html
@@ -94,6 +94,8 @@
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/remove-member-links-confirm" target="_blank">Team member</a> confirm remove</li>
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/remove-member-links-confirm-error" target="_blank">Team member</a> confirm error msg</li>
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/remove-member-links-success" target="_blank">Team member</a> success</li>
+
+            <li>[<a class="govuk-link govuk-link--no-visited-state" href="/psd-general/remove-member-links-design-only" target="_blank">Team member</a> design only]</li>
           </ul>
 
           <p class="govuk-body"><b>Businesses:</b></p>
