--- a/app/views/psd-general/imgs-pg2.html
+++ b/app/views/psd-general/imgs-pg2.html
@@ -23,7 +23,7 @@
 </a>      </li>
       <li class="hmcts-sub-navigation__item">
         <a class="hmcts-sub-navigation__link" aria-current="page" id="Images_id" href="/cases/2109-0007/images">
-          Images (1) (2)
+          Images (3)
 </a>      </li>
       <li class="hmcts-sub-navigation__item">
         <a class="hmcts-sub-navigation__link" id="Supporting information_id" href="/cases/2109-0007/supporting-information">
@@ -92,8 +92,23 @@
 
     <p class="govuk-body"></p><p></p><p></p>
 
-      <a class="govuk-link app-block-link govuk-!-margin-right-3" target="_blank" rel="noopener" href="/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcGNFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--110295faaf0096d6d221774f790d2b4401c407a0/hair-dryer-with-plug.jpg">View image<span class="govuk-visually-hidden"> (hair-dryer-with-plug.jpg, opens in new tab)</span>
-</a>
+      <ul class="govuk-list opss-list opss-list--inline"><!-- **************** new list HTML ************ -->
+        <li>
+          <a class="govuk-link govuk-link--no-visited-state" target="_blank" rel="noreferrer noopener" href="/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBblVFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--4bc14d851b84657824e010e94aa3a32e98debcec/hair-dryer-with-plug.jpg">View image<span class="govuk-visually-hidden"> - hair-dryer-with-plug.jpg opens in new tab</span>
+          </a>
+        </li>
+        <li>
+          <a class="govuk-link govuk-link--no-visited-state" href="#">
+            Edit <span class="govuk-visually-hidden">the hair-dryer-with-plug.jpg </span>image
+          </a>
+        </li>
+        <li>
+          <a class="govuk-link govuk-link--no-visited-state" href="#">
+            Remove <span class="govuk-visually-hidden">the hair-dryer-with-plug.jpg </span>image
+          </a>
+        </li>
+      </ul>
+
 
   </div>
 </div>
@@ -101,7 +116,18 @@
 
       </div>
       <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="opss-product-images">
-        <h2 class="govuk-heading-s">The product name goes here</h2>
+
+
+        <div class="govuk-grid-row govuk-!-margin-bottom-6">
+          <div class="govuk-grid-column-two-thirds">
+            <h2 class="govuk-heading-s">Zoom hair dryer 1000</h2>
+          </div>
+          <div class="govuk-grid-column-one-third">
+            <a href="#" class="govuk-link govuk-link--no-visited-state opss-text-align-right">
+              Go to the <span class="govuk-visually-hidden">Zoom hair dryer 1000</span> product page
+            </a>
+          </div>
+        </div>
 
 
 <!-- old html starts -->
@@ -167,8 +193,17 @@
 
 </div>
 
+<div class="govuk-grid-row govuk-!-margin-bottom-6">
+  <div class="govuk-grid-column-two-thirds">
+    <h2 class="govuk-heading-s">Dyson hair dryer max</h2>
+  </div>
+  <div class="govuk-grid-column-one-third">
+    <a href="#" class="govuk-link govuk-link--no-visited-state opss-text-align-right">
+      Go to the <span class="govuk-visually-hidden">Dyson hair dryer max</span> product page
+    </a>
+  </div>
+</div>
 
-<!--h2 class="govuk-heading-s">The 2nd product name goes here</h2>
 <div class="govuk-grid-row govuk-!-padding-bottom-6">
   <div class="govuk-grid-column-one-quarter">
 
@@ -230,7 +265,7 @@
 
   </div>
 
-</div-->
+</div>
 <!-- old html ends -->
 
 
