--- a/app/views/psd-general/remove-member-links-confirm-error.html
+++ b/app/views/psd-general/remove-member-links-confirm-error.html
@@ -33,20 +33,22 @@
 </div>
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-three-quarters">
 
         <form action="#" method="post" novalidate>
 
           <div class="govuk-form-group govuk-form-group--error">
 
-            <fieldset class="govuk-fieldset" aria-describedby="remove-error">
+            <fieldset class="govuk-fieldset" aria-describedby="remove-hint remove-error">
 
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
                 Do you want to remove John Smith from your team?
               </h1>
             </legend>
-
+            <div id="remove-hint" class="govuk-hint">
+              John Smith will no longer be able to access the Product Safety Database. Any cases assigned to or owned by this member will be re-assigned to the team. This cannot be undone.
+            </div>
 
             <span id="remove-error" class="govuk-error-message">
               <span class="govuk-visually-hidden">Error:</span> Select yes if you want to remove the team member from your team
