--- a/app/views/layout-psd-width.html
+++ b/app/views/layout-psd-width.html
@@ -63,7 +63,14 @@
     border-bottom: none 0;
   }
   .govuk-header__logo {
-    width: 80% !important;
+    width: 74% !important;
+  }
+  .psd-header__secondary-navigation {
+    margin-right: 15px !important;
+    margin-left: 0 !important;
+  }
+  .psd-header__navigation-item--right  {
+    margin-right: 15px !important;
   }
   .psd-header__navigation {
     margin-left: -14px !important;
