--- a/app/views/cos-tasks-proto/start.html
+++ b/app/views/cos-tasks-proto/start.html
@@ -19,12 +19,15 @@
       </ul-->
 
       <p class="govuk-body">Prototype for breaking down the current process of adding a product into smaller tasks, following a 'drafts' model with the ability for users to edit the draft before submitting it.</p>
+
+      <p class="govuk-body"><b>You may need to <a href="/prototype-admin/clear-data" class="govuk-link govuk-link--no-visited-state" target="_blank">clear the data</a> for this new session</b>. (Opens in a new tab).</p>
+
       <p class="govuk-body">Start using the prototype and tasks based user-flow: </p>
 
       <a href="tasks-1a.html" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">Start now <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false"><path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path></svg>
       </a>
 
-      <p class="govuk-body">Start each time from this page to clear the application history/memory.</p>
+      <!--p class="govuk-body">Start each time from this page to clear the application history/memory.</p-->
 
       <!--h2 class="govuk-heading-m">Before you start</h2>
 
