--- a/app/views/layout-cos-tasks-proto.html
+++ b/app/views/layout-cos-tasks-proto.html
@@ -34,14 +34,14 @@
 <!--[if lte IE 8]><link href="/public/stylesheets/application-ie8.css" rel="stylesheet" type="text/css" /><![endif]-->
 <!--[if gt IE 8]><!--><link href="/public/stylesheets/application.css" media="all" rel="stylesheet" type="text/css" /><!--<![endif]-->
 <style>/* prototype styles only ... */
-body.newpage:before, body.oldpage:before {content: 'This is a new page (new HTML)'; border: 1px solid #b1b4b6; color: #b1b4b6; display: block; width: fit-content; height: fit-content; font-size: 12px; font-family: 'GDS Transport'; position: absolute; top: 0; right: 0; padding: 2px; }
-body.oldpage:before {content: 'This is an old page (reused HTML)'; }
+body.newpage:before, body.oldpage:before {content: 'This is a NEW page (new HTML)'; border: 1px solid #b1b4b6; color: #b1b4b6; display: block; width: fit-content; height: fit-content; font-size: 12px; font-family: 'GDS Transport'; position: absolute; top: 0; right: 0; padding: 2px; }
+body.oldpage:before {content: 'This is an OLD page (reused HTML)'; }
 </style>
 {% endblock %}
 
 
 {% block header %}
-  {% include "includes/cookie-banner.html" %}
+
   {# Set serviceName in config.js. #}
   {{ govukHeader({
     homepageUrl: "/index.html",
