--- a/app/views/cos-tasks-proto/task1-does-it-contain-nanomaterials.html
+++ b/app/views/cos-tasks-proto/task1-does-it-contain-nanomaterials.html
@@ -15,10 +15,8 @@
 
 {% block content %}
 
-
-
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full-width">
+    <div class="govuk-grid-column-full">
 
       <form action="#">
         <div class="govuk-form-group">
@@ -50,14 +48,14 @@
               </div>
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="nano-2" name="nano" type="radio" value="phone">
+                <input class="govuk-radios__input" id="nano-2" name="nano" type="radio" value="no">
                 <label class="govuk-label govuk-radios__label" for="nano-2">
                   No
                 </label>
               </div>
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="nano-3" name="nano" type="radio" value="text" data-aria-controls="conditional-nano-3">
+                <input class="govuk-radios__input" id="nano-3" name="nano" type="radio" value="dontknow">
                 <label class="govuk-label govuk-radios__label" for="nano-3">
                   Don't know
                 </label>
@@ -73,5 +71,56 @@
 
     </div>
   </div>
+
+
+<!-- **** Do not include in final production HTML: starts **** -->
+<script>
+document.addEventListener('DOMContentLoaded', function load() {
+    if (!window.jQuery) return setTimeout(load, 50);
+
+    jQuery(document).ready(function(){
+
+
+
+
+      $('#main-content').find('form').submit(function(e){
+        e.preventDefault();
+
+        var nanoNumber = $('#nano-qty');
+
+        if( ($('#nano').is(":checked") ) && ( nanoNumber.val()) ){//yes + number
+          window.localStorage.setItem('nanosSet', 'true');
+          window.localStorage.setItem('nanosQty', nanoNumber.val());
+
+          window.location.assign('task1-how-is-user-exposed.html');
+
+        }else if($('#nano-2').is(":checked")) {//no
+          var nanosQty = window.localStorage.getItem('nanosQty');
+
+          if(nanosQty != ''){
+            window.location.assign('task1-blank1.html');
+          }else{
+            window.localStorage.setItem('nanosSet', 'false');
+            window.location.assign('task1-how-is-user-exposed.html');
+          }
+
+        }else if($('#nano-3').is(":checked")) {//don't know
+
+          if(nanosQty != ''){
+            window.location.assign('task1-blank1.html');
+          }else{
+            window.localStorage.setItem('nanosSet', 'dontknow');
+            window.location.assign('task1-multi-items.html'); //****************** on task2 mockup page, getItem and if its dontknow show different pg design on the fly with js show/hide
+          }
+
+        }
+
+      });
+
+    });
+
+});
+</script>
+<!-- **** Do not include in final production HTML: ends **** -->
 
 {% endblock %}
