--- a/app/views/index.html
+++ b/app/views/index.html
@@ -226,6 +226,16 @@
           </span>
         </summary>
         <div class="govuk-details__text">
+
+
+
+            <p class="govuk-body">
+              New pages for the <br>
+              <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/tasks/index" target="_blank">New tasks based user journey</a>
+            </p>
+
+
+            <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
             <ul class="govuk-list govuk-list--bullet">
               <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/incomplete-product_b.html" target="_blank">Incomplete product page</a>
                 <ul class="govuk-list govuk-list--bullet">
