restricted view design

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -77,7 +77,9 @@
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page" target="_blank">Cases page &quot;refresh&quot;</a> full</li>
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page-banner" target="_blank">Cases page &quot;refresh&quot;</a> full with success banner</li>
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page-list" target="_blank">Cases page &quot;refresh&quot;</a> list only</li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page-list-restricted" target="_blank">Cases page &quot;refresh&quot;</a> list only with a <b>restricted</b> card</li>
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page-filters-keywords" target="_blank">Cases page &quot;refresh&quot;</a> filters &amp; keywords only</li>
+
           </ul>
 
           <p class="govuk-body"><b>Images:</b></p>
@@ -229,13 +231,13 @@
 
 
 
-            <p class="govuk-body">
+            <!--p class="govuk-body">
               New pages for the <br>
               <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/tasks/index" target="_blank">New tasks based user journey</a>
             </p>
 
 
-            <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+            <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"-->
             <ul class="govuk-list govuk-list--bullet">
               <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/incomplete-product_b.html" target="_blank">Incomplete product page</a>
                 <ul class="govuk-list govuk-list--bullet">
