--- a/app/views/index.html
+++ b/app/views/index.html
@@ -78,6 +78,7 @@
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page-banner" target="_blank">Cases page &quot;refresh&quot;</a> full with success banner</li>
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page-list" target="_blank">Cases page &quot;refresh&quot;</a> list only</li>
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page-list-restricted" target="_blank">Cases page &quot;refresh&quot;</a> list only with a <b>restricted</b> card</li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page-list-keywords" target="_blank">Cases page &quot;refresh&quot;</a> list only with a <b>keywords</b> examples</li>
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page-filters-keywords" target="_blank">Cases page &quot;refresh&quot;</a> filters &amp; keywords only</li>
 
           </ul>
