tasks based drafts

--- a/app/views/layout-psd-width.html
+++ b/app/views/layout-psd-width.html
@@ -82,6 +82,7 @@
   .psd-header__navigation-item.psd-header__navigation-item--active:before {
     height: 3px !important;
   }
+  .psd-header__navigation-item--active.psd-header__navigation-item--right,
   .psd-header__navigation-item--right {
     padding: 0;
     float: none !important;
@@ -200,7 +201,7 @@
                 <li class="psd-header__navigation-item">
                   <a class="psd-header__link" href="/home">Home</a>
                 </li>
-                <li class="psd-header__navigation-item psd-header__navigation-item--active">
+                <li class="psd-header__navigation-item">
                     <a class="psd-header__link" href="/cases?allegation=unchecked&amp;created_by%5Bid%5D=&amp;created_by%5Bme%5D=&amp;created_by%5Bmy_team%5D=&amp;created_by%5Bsomeone_else%5D=&amp;enquiry=unchecked&amp;project=unchecked&amp;sort_by=recent&amp;status_open=true&amp;teams_with_access%5Bmy_team%5D=&amp;teams_with_access%5Bother_team_with_access%5D=">Cases</a>
                 </li>
                 <li class="psd-header__navigation-item ">
@@ -209,7 +210,7 @@
                 <li class="psd-header__navigation-item ">
                     <a class="psd-header__link" href="/products">Products</a>
                 </li>
-                <li class="psd-header__navigation-item psd-header__navigation-item--right">
+                <li class="psd-header__navigation-item psd-header__navigation-item--active psd-header__navigation-item--right">
                     <a class="psd-header__link" href="/teams/8f1640c2-0e52-49d3-a19f-83e5ac30ee0e">Your team</a>
                 </li>
           </ul>
