--- a/app/views/cosmetics-general/tasks/pg-does-it-contain-nanomaterials-short.html
+++ b/app/views/cosmetics-general/tasks/pg-does-it-contain-nanomaterials-short.html
@@ -61,7 +61,7 @@
         <div class="govuk-button-group">
           <button class="govuk-button ">Continue</button>
 
-          <a class="govuk-link" href="[back to task list page]">Cancel</a>
+          <a class="govuk-link govuk-link--no-visited-state" href="task-page-nanomaterials">Cancel</a>
         </div>
 
       </form>
