--- a/app/views/cosmetics-general/tasks/index.html
+++ b/app/views/cosmetics-general/tasks/index.html
@@ -138,7 +138,9 @@
         <h2 class="govuk-heading-s">More pages are coming...</h2>
 
 
-        <hr>
+        <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+            <p class="govuk-body">Latest <abbr>CSS</abbr> for prototyping: <a href="https://opss-html.herokuapp.com/public/stylesheets/application.css" class="govuk-link govuk-link--no-visited-state" target="_blank">application.css</a>.</p>
+        <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
         <details class="govuk-details govuk-!-margin-top-6" data-module="govuk-details">
             <summary class="govuk-details__summary">
