--- a/app/views/cosmetics-general/tasks/help/inc_products-task3.html
+++ b/app/views/cosmetics-general/tasks/help/inc_products-task3.html
@@ -1,6 +1,6 @@
-        <div class="opss-border-all govuk-!-padding-top-2 govuk-!-padding-right-2 govuk-!-padding-bottom-0 govuk-!-padding-left-2 govuk-!-margin-top-8 govuk-!-margin-bottom-4">
+        <div class="govuk-!-margin-top-7 govuk-!-margin-bottom-4">
             {% include "cosmetics-general/tasks/help/inc_title.html" %}
 
-            <p class="govuk-body govuk-!-font-size-14">You are able to make final adjustments to the product details before accepting the draft and submitting it.
+            <p class="govuk-body govuk-!-font-size-16">You are able to make final adjustments to the product details before accepting the draft and submitting it.
             </p>
         </div>
