--- a/app/views/layout-routes-02-auto-space.html
+++ b/app/views/layout-routes-02-auto-space.html
@@ -46,7 +46,7 @@
   }) }}
 {% endblock %}
 
-{% set mainClasses = mainClasses | default("") %}<!-- govuk-main-wrapper govuk-main-wrapper--auto-spacing -->
+{% set mainClasses = mainClasses | default("govuk-main-wrapper--auto-spacing") %}<!-- govuk-main-wrapper -->
 
 {% if useAutoStoreData %}
   {% block footer %}
