--- a/app/views/cosmetics-general/tasks/inc_opss-header-section.html
+++ b/app/views/cosmetics-general/tasks/inc_opss-header-section.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="govuk-grid-column-one-third govuk-!-margin-bottom-2">
                     <a href="pg-delete-draft.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
-                        Delete <span class="govuk-visually-hidden">this </span>draft
+                        Delete this draft
                     </a>
                 </div>
             </div>
