--- a/app/views/cosmetics-general/tasks/task-page-4d.html
+++ b/app/views/cosmetics-general/tasks/task-page-4d.html
@@ -18,8 +18,8 @@
 
 <div class="govuk-grid-row opss-switch-cols">
     <div class="govuk-grid-column-one-quarter govuk-!-padding-top-9 opss-switch-cols__right">
-        <a href="view-draft.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
-            View draft
+        <a href="pg-view-draft.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
+            View this draft
         </a>
         {% include "cosmetics-general/tasks/help/inc_products-task3.html" %}
     </div>
