--- a/app/views/cosmetics-general/tasks/task-page-nanomaterials.html
+++ b/app/views/cosmetics-general/tasks/task-page-nanomaterials.html
@@ -93,8 +93,8 @@
 
     </section>
     <div class="govuk-grid-column-one-quarter govuk-!-padding-top-9">
-        <a href="view-draft.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
-            View draft
+        <a href="pg-view-draft.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
+            View this draft
         </a>
     </div>
 </div>
