--- a/app/views/cosmetics-general/tasks/help/inc_products-and-items.html
+++ b/app/views/cosmetics-general/tasks/help/inc_products-and-items.html
@@ -4,5 +4,5 @@
                 <li>If it has <abbr title="Carcenogenic, mutagenic or reprotoxic substances">CMR</abbr>s (and their details).</li>
             </ul-->
 
-            <p class="govuk-body govuk-!-font-size-16">You will have three options when providing the product formulation. Either by exact concentrations or concentration ranges - provided by uploading a file - or by selecting a frame formulation (which may require uploading a list of ingredients for the National Poisons Information Service).
+            <p class="govuk-body govuk-!-font-size-16 opss-secondary-text">You will be able to provide the product formulation by exact concentrations or concentration ranges - by uploading a file - or by selecting a frame formulation (which may require uploading a list of ingredients for the National Poisons Information Service).
             </p>
