--- a/app/views/cosmetics-general/tasks/help/inc_products-task4.html
+++ b/app/views/cosmetics-general/tasks/help/inc_products-task4.html
@@ -1,5 +1,5 @@
         <div class="govuk-!-margin-top-7 govuk-!-margin-bottom-4">
             {% include "cosmetics-general/tasks/help/inc_title.html" %}
 
-            <p class="govuk-body govuk-!-font-size-16">This brief task includes a question about the product's <span class="opss-no-wrap"><abbr title="Power of hydrogen">pH</abbr> range.</span></p>
+            <p class="govuk-body govuk-!-font-size-16 opss-secondary-text">This brief task includes a question about the product's <span class="opss-no-wrap"><abbr title="Power of hydrogen">pH</abbr> range.</span></p>
         </div>
