--- a/app/views/cosmetics-general/tasks/help/inc_products-task5.html
+++ b/app/views/cosmetics-general/tasks/help/inc_products-task5.html
@@ -1,7 +1,7 @@
         <div class="govuk-!-margin-top-7 govuk-!-margin-bottom-4">
             {% include "cosmetics-general/tasks/help/inc_title.html" %}
 
-            <p class="govuk-body govuk-!-font-size-16">xxxxxxxxxxxxx or more questions about the xxxxxxxxxxxxx will include:</p>
+            <p class="govuk-body govuk-!-font-size-16 opss-secondary-text">xxxxxxxxxxxxx or more questions about the xxxxxxxxxxxxx will include:</p>
 
             <!--ul class="govuk-list govuk-list--bullet govuk-!-font-size-16">
                 <li>Have you submitted a notification about it in <abbr title="Great Britain">GB</abbr> since 1 January 2021?</li>
