--- a/app/views/cosmetics-general/tasks/inc_opss-add-cosmetics-hint.html
+++ b/app/views/cosmetics-general/tasks/inc_opss-add-cosmetics-hint.html
@@ -20,7 +20,7 @@
                 </p>
 
                 <p class="govuk-body-s">
-                    Before you accept and submit a draft you can change information by completing individual tasks again or make final changes during the last 'Accept and submit' task. You can also add or remove individual nanomaterials at any stage (if you have added at lease one previously) or delete the entire draft.
+                    Before you accept and submit a draft you can change information by completing individual tasks again or make final changes during the last 'Accept and submit' task. You can also add or remove individual nanomaterials at any stage (if you have added at lease one during the first task) or delete the entire draft.
 
                     <!-- Before you accept and submit a draft you can complete individual tasks again to change information, or you can delete the entire draft.
 
