--- a/app/views/cosmetics-general/tasks/index.html
+++ b/app/views/cosmetics-general/tasks/index.html
@@ -109,7 +109,7 @@
                 </li>
                 <li>
                     <a class="govuk-label govuk-link govuk-link--no-visited-state " href="task-page-4c" target="_blank">Tasks list page 3d</a>
-                    The user has completed the 'Multi-item kit' task. Each item in the 'Multi-item details' can now be started.
+                    The user has completed the 'Multi-item kit' task. Each item in the 'Multi-item details' can now be started. There is a small <b>change</b> to the first line of the accompanying help text (differing from the single product version).
                 </li>
                 <li>
                     <a class="govuk-label govuk-link govuk-link--no-visited-state " href="task-page-4d" target="_blank">Tasks list page 4d</a>
