--- a/app/views/cosmetics-general/tasks/help/inc_products-task2.html
+++ b/app/views/cosmetics-general/tasks/help/inc_products-task2.html
@@ -1,7 +1,7 @@
         <div class="govuk-!-margin-top-7 govuk-!-margin-bottom-4">
             {% include "cosmetics-general/tasks/help/inc_title.html" %}
 
-            <p class="govuk-body govuk-!-font-size-16">11 or more questions about the product will include asking if it has <abbr title="Carcenogenic, mutagenic or reprotoxic substances">CMR</abbr>s (and further details about them).
+            <p class="govuk-body govuk-!-font-size-16 opss-secondary-text">11 or more questions about the product will include asking if it has <abbr title="Carcenogenic, mutagenic or reprotoxic substances">CMR</abbr>s (and further details about them).
             </p>
 
             {% include "cosmetics-general/tasks/help/inc_products-and-items.html" %}
