psd style tbl mark update

--- a/app/views/cosmetics-general/tasks/help/inc_products-task1.html
+++ b/app/views/cosmetics-general/tasks/help/inc_products-task1.html
@@ -8,5 +8,5 @@
                 <li>Is it a multi-item kit (with how many items)?</li>
             </ul>
 
-            <p class="govuk-body govuk-!-font-size-16 opss-secondary-text">You will also be asked to upload an image of the product label (or one image for each item label in a multi-item kit).</p>
+            <p class="govuk-body govuk-!-font-size-16 opss-secondary-text">You will also be asked to upload an image of the product label (or for a multi-item kit, one image for each item label).</p>
         </div>
