--- a/app/views/cosmetics-general/tasks/index.html
+++ b/app/views/cosmetics-general/tasks/index.html
@@ -41,7 +41,7 @@
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
                     <a class="govuk-label govuk-link govuk-link--no-visited-state" href="task-page-1" target="_blank">Tasks list page 1</a>
-                    User clicks 'Add product' and lands here - seen as the user first visits the tasks list page. Their first task is 'Create the product'.
+                    User clicks 'Add product' and lands here - seen as the user first visits the tasks list page. Their first task is 'Create the product'. <i>In the help section is it possible on this first task to use the title: "In this first task" ?</i>
                 </li>
                 <li>
                     <a class="govuk-label govuk-link govuk-link--no-visited-state" href="task-page-2" target="_blank">Tasks list page 2</a>
