--- a/app/views/psd-general/inc_opss-results-section-keywords.html
+++ b/app/views/psd-general/inc_opss-results-section-keywords.html
@@ -123,6 +123,52 @@
 <!-- ********************************* -->
                     </tbody>
 
+<tbody class="govuk-table__body">
+  <tr class="govuk-table__row">
+    <th class="govuk-visually-hidden">
+      Case title
+    </th>
+    <th id="item_investigation_allegation_12" colspan="3" scope="colgroup" class="govuk-table__header">
+      <a class="govuk-link govuk-link--no-visited-state" href="/cases/2110-0012">Clothing, textiles and fashion items – chemical hazard (no product specified)</a>
+    </th>
+  </tr>
+  <tr class="govuk-table__row">
+    <th headers="item_investigation_allegation_12" id="meta_investigation_allegation_12" class="govuk-visually-hidden">
+      Metadata
+    </th>
+    <td headers="allegation item_investigation_allegation_12 meta_investigation_allegation_12" class="govuk-table__cell">
+      2110-0012
+    </td>
+    <td headers="caseowner item_investigation_allegation_12 meta_investigation_allegation_12" class="govuk-table__cell">
+      Nasir Khan
+    </td>
+      <td headers="updated item_investigation_allegation_12 meta_investigation_allegation_12" class="govuk-table__cell">
+        3 days ago
+      </td>
+  </tr>
+
+<tr class="govuk-table__row">
+  <th headers="item_investigation_allegation_12" id="status_investigation_allegation_12" class="govuk-visually-hidden">
+    Type
+  </th>
+  <td headers="item_investigation_allegation_12 status_investigation_allegation_12" colspan="3" class="govuk-table__cell">
+    <span class="opss-tag opss-tag--std">Allegation</span>
+      <span class="govuk-visually-hidden"> | </span>
+          <span class="opss-tag opss-tag--covid">COVID-19 related case</span>
+
+  </td>
+</tr>
+
+    <tr class="govuk-table__row">
+      <th headers="item-2" id="keywords-02" class="govuk-visually-hidden">
+        Matching keywords
+      </th>
+      <td headers="item-2 keywords-02" colspan="3" class="govuk-table__cell">
+          <span class="govuk-!-font-size-14">Product category: <em>Clothing</em>, textiles and fashion items. </span>
+      </td>
+    </tr>
+</tbody>
+
                     <tbody class="govuk-table__body">
                         <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
