--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -450,7 +450,9 @@ dl.opss-summary-list-aside {
     tbody td {
         @include govuk-font($size: 19);
 
+        span > em,
         mark {
+            font-style: normal;
             font-weight: bold;
             background: none;
             color: $govuk-text-colour;
