--- a/app/views/cosmetics-general/tasks/pg-delete-draft.html
+++ b/app/views/cosmetics-general/tasks/pg-delete-draft.html
@@ -22,7 +22,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="delete-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Do you want to delete the draft?
+                Do you want to delete this draft?
               </h1>
             </legend>
 
